--- a/index.html
+++ b/index.html
@@ -21,21 +21,6 @@
     
   </style>
   <title>Unified Implicit Neural Stylization</title>
-  <meta
-    content="A method for synthesizing novel views of complex scenes by optimizing an underlying continuous volumetric scene function using a sparse set of input views."
-    name="description">
-  <meta content="NeRF: Neural Radiance Fields" property="og:title">
-  <meta
-    content="A method for synthesizing novel views of complex scenes by optimizing an underlying continuous volumetric scene function using a sparse set of input views."
-    property="og:description">
-  <meta content="http://people.eecs.berkeley.edu/~tancik/nerf/website_renders/images/nerf_graph.jpg"
-    property="og:image">
-  <meta content="NeRF: Neural Radiance Fields" property="twitter:title">
-  <meta
-    content="A method for synthesizing novel views of complex scenes by optimizing an underlying continuous volumetric scene function using a sparse set of input views."
-    property="twitter:description">
-  <meta content="http://people.eecs.berkeley.edu/~tancik/nerf/website_renders/images/nerf_graph.jpg"
-    property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -249,32 +234,32 @@
           <div class="ui four column grid">
             <div class="row">
               <div class="column"><video
-                      src="./INS/videos/lego_interpolation.mp4" width="100%"
-                      loop="" autoplay="" controls="" playsinline=""></video></div>
+                      src="./INS/videos/lego_interpolation_3styles.mp4" width="100%"
+                      loop autoplay muted playsinline></video></div>
               <div class="column"><video
                       src="./INS/videos/ours_hotdog_candy.mp4" width="100%"
-                      loop="" autoplay="" controls="" playsinline=""></video></div>
+                      loop autoplay muted playsinline></video></div>
               <div class="column"><video
                       src="./INS/videos/ours_mic_starrynight.mp4" width="100%"
-                      loop="" autoplay="" controls="" playsinline=""></video></div>
+                      loop autoplay muted playsinline></video></div>
               <div class="column"><video
                       src="./INS/videos/ours_lego_thescream.mp4" width="100%"
-                      loop="" autoplay="" controls="" playsinline=""></video></div>
+                      loop autoplay muted playsinline></video></div>
           </div>
 
             <div class="row">
               <div class="column"><video
-                      src="./INS/videos/chair_interpolation.mp4" width="100%"
-                      loop="" autoplay="" controls="" playsinline=""></video></div>
+                      src="./INS/videos/chair_interpolation_3styles.mp4" width="100%"
+                      loop autoplay muted playsinline></video></div>
               <div class="column"><video
                         src="./INS/videos/ours_chair_rainprincess.mp4" width="100%"
-                        loop="" autoplay="" controls="" playsinline=""></video></div>
+                        loop autoplay muted playsinline></video></div>
               <div class="column"><video
                         src="./INS/videos/ours_room_thescream.mp4" width="100%"
-                        loop="" autoplay="" controls="" playsinline=""></video></div>  
+                        loop autoplay muted playsinline></video></div>  
               <div class="column"><video
                       src="./INS/videos/ours_horns_gris1.mp4" width="100%"
-                      loop="" autoplay="" controls="" playsinline=""></video></div>
+                      loop autoplay muted playsinline></video></div>
           </div>
 
       </div>
@@ -305,72 +290,72 @@
         <div class="row">
             <div class="column"><video
                     src="./INS/compare/ours_lego_thescream.mp4" width="100%"
-                    loop="" autoplay="" controls="" playsinline=""></video></div>
+                    loop autoplay muted playsinline></video></div>
             <div class="column"><video
               src="./INS/compare/style3d_lego_thescream.mp4" width="100%"
-                    loop="" autoplay="" controls="" playsinline=""></video></div>
+                    loop autoplay muted playsinline></video></div>
             <div class="column"><video
               src="./INS/compare/perceptual_lego_thescream.mp4" width="100%"
-                    loop="" autoplay  controls="" playsinline=""></video></div>
+                     loop autoplay muted playsinline></video></div>
             <div class="column"><video
               src="./INS/compare/mcc_lego_thescream.mp4" width="100%"
-                    loop="" autoplay="" controls="" playsinline=""></video></div>
+                    loop autoplay muted playsinline></video></div>
             <div class="column"><video
               src="./INS/compare/rere_lego_thescream.mp4" width="100%"
-                      loop="" autoplay="" controls="" playsinline=""></video></div>
+              loop autoplay muted playsinline></video></div>
         </div>
         <div class="row">
           <div class="column"><video
                   src="./INS/compare/ours_mic_starrynight.mp4" width="100%"
-                  loop="" autoplay="" controls="" playsinline=""></video></div>
+                  loop autoplay muted playsinline></video></div>
           <div class="column"><video
             src="./INS/compare/style3d_mic_starrynight.mp4" width="100%"
-                  loop="" autoplay="" controls="" playsinline=""></video></div>
+                  loop autoplay muted playsinline></video></div>
           <div class="column"><video
             src="./INS/compare/perceptual_mic_starrynight.mp4" width="100%"
-                  loop="" autoplay  controls="" playsinline=""></video></div>
+            loop autoplay muted playsinline></video></div>
           <div class="column"><video
             src="./INS/compare/mcc_mic_starrynight.mp4" width="100%"
-                  loop="" autoplay="" controls="" playsinline=""></video></div>
+                  loop autoplay muted playsinline></video></div>
           <div class="column"><video
             src="./INS/compare/rere_mic_starrynight.mp4" width="100%"
-                    loop="" autoplay="" controls="" playsinline=""></video></div>
+                    loop autoplay muted playsinline></video></div>
       </div>
 
       <div class="row">
         <div class="column"><video
                 src="./INS/compare/ours_chair_rainprincess.mp4" width="100%"
-                loop="" autoplay="" controls="" playsinline=""></video></div>
+                loop autoplay muted playsinline></video></div>
         <div class="column"><video
           src="./INS/compare/style3d_chair_rainprincess.mp4" width="100%"
-                loop="" autoplay="" controls="" playsinline=""></video></div>
+                loop autoplay muted playsinline></video></div>
         <div class="column"><video
           src="./INS/compare/perceptual_chair_rainprincess.mp4" width="100%"
-                loop="" autoplay  controls="" playsinline=""></video></div>
+                 loop autoplay muted playsinline></video></div>
         <div class="column"><video
           src="./INS/compare/mcc_chair_rainprincess.mp4" width="100%"
-                loop="" autoplay="" controls="" playsinline=""></video></div>
+                loop autoplay muted playsinline></video></div>
         <div class="column"><video
           src="./INS/compare/rere_chair_rainprincess.mp4" width="100%"
-                  loop="" autoplay="" controls="" playsinline=""></video></div>
+                  loop autoplay muted playsinline></video></div>
     </div>
 
     <div class="row">
       <div class="column"><video
               src="./INS/compare/ours_room_thescream.mp4" width="100%"
-              loop="" autoplay="" controls="" playsinline=""></video></div>
+              loop autoplay muted playsinline></video></div>
       <div class="column"><video
         src="./INS/compare/style3d_room_thescream.mp4" width="100%"
-              loop="" autoplay="" controls="" playsinline=""></video></div>
+              loop autoplay muted playsinline></video></div>
       <div class="column"><video
         src="./INS/compare/perceptual_room_thescream.mp4" width="100%"
-              loop="" autoplay  controls="" playsinline=""></video></div>
+               loop autoplay muted playsinline></video></div>
       <div class="column"><video
         src="./INS/compare/mcc_room_thescream.mp4" width="100%"
-              loop="" autoplay="" controls="" playsinline=""></video></div>
+              loop autoplay muted playsinline></video></div>
       <div class="column"><video
         src="./INS/compare/rere_room_thescream.mp4" width="100%"
-                loop="" autoplay="" controls="" playsinline=""></video></div>
+                loop autoplay muted playsinline></video></div>
   </div>
 
     </div>
