--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5aaddbdee8d43ceeae2f2e4c_favicon-32x32.png"
+  <link href="./INS/ut.png"
     rel="shortcut icon" type="image/x-icon">
   <link href="https://y7v4p6k4.ssl.hwcdn.net/51db7fcf29a6f36b2a000001/51e06d302f5394c87600002a_webclip-comet.png"
     rel="apple-touch-icon">
@@ -103,8 +103,9 @@
   </div>
   <div class="section hero nerf-_v2 wf-section">
     <div class="container-2 nerf_header_v2 w-container">
-      <h1 class="nerf_title_v2">INS</h1>
-      <h1 class="nerf_subheader_v2">Unified Implicit Neural Stylization</h1>
+      <h1 class="nerf_title_v2" style="font-size: 3.5em">Unified Implicit Neural Stylization</h1>
+    </br>
+      <!-- <h1 class="nerf_subheader_v2">Unified Implicit Neural Stylization</h1> -->
       <!-- <h1 class="eccv_label">ECCV 2020 Oral - Best Paper Honorable Mention</h1> -->
       <div class="nerf_authors_list_single w-row">
         <div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://zhiwenfan.github.io/" target="_blank"
