--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1052.0" data-gr-ext-installed="">
-  <div class="github_logo w-embed"><a href="https://github.com/bmild/nerf" class="github-corner"
+  <div class="github_logo w-embed"><a href="https://github.com/VITA-Group/INS" class="github-corner"
       aria-label="View source on Github">
       <svg width="80" height="80" viewBox="0 0 250 250"
         style="fill:#333333; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
