--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             class="text-span_nerf_star">*</span>Denotes Equal Contribution</div>
       </div>
       <div class="link_column_nerf_v2 w-row">
-        <div class="w-col w-col-6 w-col-small-6 w-col-tiny-6"><a href="https://arxiv.org/abs/None"
+        <div class="w-col w-col-6 w-col-small-6 w-col-tiny-6"><a href="https://arxiv.org/abs/2204.01943"
             class="link-block w-inline-block"><img
               src="./INS/5cab99df4998decfbf9e218e_paper-01.png" alt="paper"
               sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px"
@@ -366,10 +366,10 @@
   <div class="white_section_nerf wf-section">
     <div class="citation w-container"  style="margin-top: 3em">
       <h2 class="grey-heading_nerf">Citation</h2>
-      <!-- <p class="paragraph-3 nerf_text nerf_results_text citation">@inproceedings{mildenhall2020nerf,<br>
-        &nbsp;title={NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis},<br> &nbsp;author={Ben
-        Mildenhall and Pratul P. Srinivasan and Matthew Tancik and Jonathan T. Barron and Ravi Ramamoorthi and Ren
-        Ng},<br> &nbsp;year={2020},<br> &nbsp;booktitle={ECCV},<br>}</p> -->
+      <p class="paragraph-3 nerf_text" style="color:#000000">@inproceedings{zhiwenfan_ins,<br>
+        &nbsp;title={Unified Implicit Neural Stylization},<br> &nbsp;author={Zhiwen Fan and
+           Yifan Jiang and Peihao Wang and Xinyu Gong and Dejia Xu and Zhangyang Wang},<br> &nbsp;year={2022},<br> &nbsp;booktitle={Arxiv},<br>}</p>
+
     </div>
   </div> -->
   <script src="./INS/jquery-3.5.1.min.dc5e7f18c8.js.下载" type="text/javascript"
