--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
   <div class="white_section_nerf wf-section">
     <div class="citation w-container"  style="margin-top: 3em">
       <h2 class="grey-heading_nerf">Citation</h2>
-      <p class="paragraph-3 nerf_text" style="color:#000000">@inproceedings{zhiwenfan_ins,<br>
-        &nbsp;title={Unified Implicit Neural Stylization},<br> &nbsp;author={Zhiwen Fan and
-           Yifan Jiang and Peihao Wang and Xinyu Gong and Dejia Xu and Zhangyang Wang},<br> &nbsp;year={2022},<br> &nbsp;booktitle={Arxiv},<br>}</p>
+      <p class="paragraph-3 nerf_text" style="color:#000000">@article{fan2022unified,<br>
+        title={Unified Implicit Neural Stylization},,<br> author={Fan, Zhiwen and Jiang, Yifan and Wang, Peihao and Gong, Xinyu and Xu, Dejia and Wang, Zhangyang},
+        <br> journal={arXiv preprint arXiv:2204.01943},<br> year={2022}<br>}</p>
 
     </div>
   </div> -->
